# rustvate

./: Cargo.toml  README.md
extension/: background.js  content.js  manifest.json
extension/pkg/: rustvate_bg.wasm
pkg/: rustvate.d.ts  rustvate.js  rustvate_bg.wasm  rustvate_bg.wasm.d.ts
src/: lib.rs
